--- a/PlanBee.csproj
+++ b/PlanBee.csproj
@@ -35,26 +35,27 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Eto, Version=2.5.0.0, Culture=neutral, PublicKeyToken=552281e97c755530, processorArchitecture=MSIL">
-      <HintPath>..\packages\RhinoCommon.6.15.19164.21011\lib\net45\Eto.dll</HintPath>
+      <HintPath>packages\RhinoCommon.6.15.19164.21011\lib\net45\Eto.dll</HintPath>
     </Reference>
     <Reference Include="GH_IO, Version=6.15.19164.21010, Culture=neutral, PublicKeyToken=6a29997d2e6b4f97, processorArchitecture=MSIL">
-      <HintPath>..\packages\Grasshopper.6.15.19164.21011\lib\net45\GH_IO.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Grasshopper.6.15.19164.21011\lib\net45\GH_IO.dll</HintPath>
     </Reference>
     <Reference Include="Grasshopper, Version=6.15.19164.21010, Culture=neutral, PublicKeyToken=dda4f5ec2cd80803, processorArchitecture=MSIL">
-      <HintPath>..\packages\Grasshopper.6.15.19164.21011\lib\net45\Grasshopper.dll</HintPath>
+      <HintPath>packages\Grasshopper.6.15.19164.21011\lib\net45\Grasshopper.dll</HintPath>
     </Reference>
     <Reference Include="Rhino.UI, Version=6.15.19164.21010, Culture=neutral, PublicKeyToken=552281e97c755530, processorArchitecture=MSIL">
-      <HintPath>..\packages\RhinoCommon.6.15.19164.21011\lib\net45\Rhino.UI.dll</HintPath>
+      <HintPath>packages\RhinoCommon.6.15.19164.21011\lib\net45\Rhino.UI.dll</HintPath>
     </Reference>
     <Reference Include="RhinoCommon, Version=6.15.19164.21010, Culture=neutral, PublicKeyToken=552281e97c755530, processorArchitecture=MSIL">
-      <HintPath>..\packages\RhinoCommon.6.15.19164.21011\lib\net45\RhinoCommon.dll</HintPath>
+      <HintPath>packages\RhinoCommon.6.15.19164.21011\lib\net45\RhinoCommon.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <HintPath>..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
+    <Reference Include="System.Data">
+      <HintPath>..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing">
@@ -178,12 +179,14 @@ Erase "$(TargetPath)"</PostBuildEvent>
     <StartAction>Program</StartAction>
   </PropertyGroup>
   <Import Project="..\packages\RhinoCommon.6.15.19164.21011\build\net45\RhinoCommon.targets" Condition="Exists('..\packages\RhinoCommon.6.15.19164.21011\build\net45\RhinoCommon.targets')" />
+  <Import Project="..\packages\Grasshopper.6.15.19164.21011\build\net45\Grasshopper.targets" Condition="Exists('..\packages\Grasshopper.6.15.19164.21011\build\net45\Grasshopper.targets')" />
+  <Import Project="packages\RhinoCommon.6.15.19164.21011\build\net45\RhinoCommon.targets" Condition="Exists('packages\RhinoCommon.6.15.19164.21011\build\net45\RhinoCommon.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\RhinoCommon.6.15.19164.21011\build\net45\RhinoCommon.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\RhinoCommon.6.15.19164.21011\build\net45\RhinoCommon.targets'))" />
-    <Error Condition="!Exists('..\packages\Grasshopper.6.15.19164.21011\build\net45\Grasshopper.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Grasshopper.6.15.19164.21011\build\net45\Grasshopper.targets'))" />
+    <Error Condition="!Exists('packages\RhinoCommon.6.15.19164.21011\build\net45\RhinoCommon.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\RhinoCommon.6.15.19164.21011\build\net45\RhinoCommon.targets'))" />
+    <Error Condition="!Exists('packages\Grasshopper.6.15.19164.21011\build\net45\Grasshopper.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Grasshopper.6.15.19164.21011\build\net45\Grasshopper.targets'))" />
   </Target>
-  <Import Project="..\packages\Grasshopper.6.15.19164.21011\build\net45\Grasshopper.targets" Condition="Exists('..\packages\Grasshopper.6.15.19164.21011\build\net45\Grasshopper.targets')" />
+  <Import Project="packages\Grasshopper.6.15.19164.21011\build\net45\Grasshopper.targets" Condition="Exists('packages\Grasshopper.6.15.19164.21011\build\net45\Grasshopper.targets')" />
 </Project>
