Adding GhcSingleSpace cells functionality.

--- a/PlanBee.csproj
+++ b/PlanBee.csproj
@@ -74,6 +74,7 @@
     <Compile Include="GhcPerimeterDistance.cs" />
     <Compile Include="GhcPlanCells.cs" />
     <Compile Include="GhcSimpleCells.cs" />
+    <Compile Include="GhcSingleSpaceCells.cs" />
     <Compile Include="KMap.cs" />
     <Compile Include="PBSun.cs" />
     <Compile Include="PBUtilities.cs" />
@@ -160,6 +161,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\SimplifiedCells-01.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CellsSingleVolume-01.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
