--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,9 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+.vs/PlanBee/v15/.suo
+.vs/PlanBee/v15/Server/sqlite3/storage.ide-shm
+.vs/PlanBee/v15/Server/sqlite3/storage.ide-wal
+.vs/PlanBee/v15/.suo
+.vs/PlanBee/v15/Server/sqlite3/storage.ide-shm
+.vs/PlanBee/v15/Server/sqlite3/storage.ide-wal
