--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,4 @@ __pycache__/
 .vs/PlanBee/v15/.suo
 .vs/PlanBee/v15/Server/sqlite3/storage.ide-shm
 .vs/PlanBee/v15/Server/sqlite3/storage.ide-wal
+.vs/PlanBee/v15/.suo
