--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Grasshopper" version="6.15.19164.21011" targetFramework="net45" />
+  <package id="QuickGraph" version="3.6.61119.7" targetFramework="net45" />
   <package id="RhinoCommon" version="6.15.19164.21011" targetFramework="net45" />
 </packages>
