'Between Paths' added & exit access changed to display shortest dist to exits

--- a/PlanBee.csproj
+++ b/PlanBee.csproj
@@ -90,6 +90,7 @@
     <Compile Include="GhcPlanCells.cs" />
     <Compile Include="GhcSimpleCells.cs" />
     <Compile Include="GhcSingleSpaceCells.cs" />
+    <Compile Include="Ghc_BetweenPaths.cs" />
     <Compile Include="Ghc_ClusteringCoefficient.cs" />
     <Compile Include="Ghc_MeanShortestPaths.cs" />
     <Compile Include="Ghc_MSPSampled.cs" />
@@ -197,6 +198,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Icons\PlanBee Component-01.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Icons\BetweenPaths-01.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
