--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ bld/
 
 # Visual Studio 2015 cache/options directory
 .vs/
+.vs\
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -266,3 +267,5 @@ __pycache__/
 .vs/PlanBee/v15/Server/sqlite3/storage.ide-shm
 .vs/PlanBee/v15/Server/sqlite3/storage.ide-wal
 .vs/PlanBee/v15/.suo
+.vs/PlanBee/v15/.suo
+.vs/PlanBee/v15/Server/sqlite3/storage.ide-shm
