Updated all GH component .cs files to have the same naming convention

--- a/PlanBee.csproj
+++ b/PlanBee.csproj
@@ -78,19 +78,19 @@
   <ItemGroup>
     <Compile Include="AxisVector2dInt.cs" />
     <Compile Include="Face.cs" />
-    <Compile Include="GhcAnalysisPeriod.cs" />
-    <Compile Include="GhcAttractions.cs" />
-    <Compile Include="GhcCovidAnalysis.cs" />
-    <Compile Include="GhcDaylightAccess.cs" />
-    <Compile Include="GhcExitAccess.cs" />
-    <Compile Include="GhcIsovist.cs" />
-    <Compile Include="GhcKohonenMap.cs" />
-    <Compile Include="GhcNeighborhoodSize.cs" />
-    <Compile Include="GhcParsePrograms.cs" />
-    <Compile Include="GhcPerimeterDistance.cs" />
-    <Compile Include="GhcPlanCells.cs" />
-    <Compile Include="GhcSimpleCells.cs" />
-    <Compile Include="GhcSingleSpaceCells.cs" />
+    <Compile Include="Ghc_AnalysisPeriod.cs" />
+    <Compile Include="Ghc_Attractions.cs" />
+    <Compile Include="Ghc_CovidAnalysis.cs" />
+    <Compile Include="Ghc_DaylightAccess.cs" />
+    <Compile Include="Ghc_ExitAccess.cs" />
+    <Compile Include="Ghc_Isovist.cs" />
+    <Compile Include="Ghc_KohonenMap.cs" />
+    <Compile Include="Ghc_NeighborhoodSize.cs" />
+    <Compile Include="Ghc_ParsePrograms.cs" />
+    <Compile Include="Ghc_PerimeterDistance.cs" />
+    <Compile Include="Ghc_PlanCells.cs" />
+    <Compile Include="Ghc_SimpleCells.cs" />
+    <Compile Include="Ghc_SingleSpaceCells.cs" />
     <Compile Include="Ghc_BetweenPaths.cs" />
     <Compile Include="Ghc_ClusteringCoefficient.cs" />
     <Compile Include="Ghc_ExitAccessBetween.cs" />
