--- a/app.config
+++ b/app.config
@@ -2,10 +2,14 @@
 <configuration>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <loadFromRemoteSources enabled="true"/>
+      <loadFromRemoteSources enabled="true" />
       <dependentAssembly>
         <assemblyIdentity name="RhinoCommon" publicKeyToken="552281e97c755530" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.1.30000.16" newVersion="5.1.30000.16" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.4.1.0" newVersion="4.4.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
