--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNet.Contracts" version="1.10.20606.1" targetFramework="net45" developmentDependency="true" />
+  <package id="DotParser" version="1.0.6" targetFramework="net45" />
+  <package id="FSharp.Core" version="4.0.0.1" targetFramework="net45" />
+  <package id="FSharpx.Collections.Experimental" version="1.7.3" targetFramework="net45" />
+  <package id="FSharpx.Core" version="1.7.3" targetFramework="net45" />
   <package id="Grasshopper" version="6.15.19164.21011" targetFramework="net45" />
   <package id="QuickGraph" version="3.6.61119.7" targetFramework="net45" />
   <package id="RhinoCommon" version="6.15.19164.21011" targetFramework="net45" />
+  <package id="YC.QuickGraph" version="3.7.4" targetFramework="net45" />
 </packages>
