Ignore .db.lock file

--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,4 @@ __pycache__/
 .vs/PlanBee/v15/Server/sqlite3/db.lock
 .vs/PlanBee/v15/Server/sqlite3/storage.ide
 .vs/PlanBee/v15/Server/sqlite3/db.lock
+.vs/PlanBee/v15/Server/sqlite3/db.lock
