--- a/packages.config
+++ b/packages.config
@@ -8,5 +8,6 @@
   <package id="Grasshopper" version="6.15.19164.21011" targetFramework="net45" />
   <package id="QuickGraph" version="3.6.61119.7" targetFramework="net45" />
   <package id="RhinoCommon" version="6.15.19164.21011" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
   <package id="YC.QuickGraph" version="3.7.4" targetFramework="net45" />
 </packages>
