--- a/PlanBee.csproj
+++ b/PlanBee.csproj
@@ -62,6 +62,9 @@
     <Reference Include="System.Data">
       <HintPath>..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.Data.dll</HintPath>
     </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing">
@@ -95,6 +98,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AxisVector2dInt.cs" />
+    <Compile Include="Base\GH_AsyncComponent.cs" />
+    <Compile Include="Base\WorkerInstance.cs" />
     <Compile Include="Face.cs" />
     <Compile Include="Ghc_AnalysisPeriod.cs" />
     <Compile Include="Ghc_Attractions.cs" />
@@ -235,6 +240,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Icons\CovidComp-01.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ClusteringCoeff-01.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
