Added .vs files to gitignore....

--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,6 @@ __pycache__/
 .vs/PlanBee/v15/Server/sqlite3/storage.ide
 .vs/PlanBee/v15/Server/sqlite3/db.lock
 .vs/PlanBee/v15/Server/sqlite3/db.lock
+.vs/PlanBee/v15/Server/sqlite3/storage.ide-shm
+.vs/PlanBee/v15/Server/sqlite3/storage.ide-shm
+.vs/PlanBee/v15/.suo
